Tutorial documentation written. Bug fixes

--- a/auto-doc/identifier-index.html
+++ b/auto-doc/identifier-index.html
@@ -110,7 +110,7 @@
 </tr>
 <tr>
 <td width="33%" class="link-index"><a href="npyscreen.Popup.ActionPopup-class.html">ActionPopup</a></td>
-<td width="33%" class="link-index"><a href="npyscreen.NPSAppManaged.NPSAppManaged-class.html#addForm">addForm()</a><br />
+<td width="33%" class="link-index"><a href="npyscreen.NPSAppManaged.NPSAppManaged-class.html#registerForm">registerForm()</a><br />
 <span class="index-where">(in&nbsp;<a href="npyscreen.NPSAppManaged.NPSAppManaged-class.html">NPSAppManaged</a>)</font></td>
 <td width="33%" class="link-index"><a href="npyscreen.autocomplete.Filename-class.html#auto_complete">auto_complete()</a><br />
 <span class="index-where">(in&nbsp;<a href="npyscreen.autocomplete.Filename-class.html">Filename</a>)</font></td>
