--- a/auto-doc/npyscreen.NPSAppManaged.NPSAppManaged-class.html
+++ b/auto-doc/npyscreen.NPSAppManaged.NPSAppManaged-class.html
@@ -71,7 +71,7 @@
 This class is intended to make it easier to program applications with many screens:
 
 1. The programmer should not now select which 'Form' to display himself.  Instead, he should set the NEXT_ACTIVE_FORM class variable.  
-   See the addForm method for details.
+   See the registerForm method for details.
    
    Doing this will avoid accidentally exceeding the maximum recursion depth.  Forms themselves should be placed under the management
    of the class using the 'addFrom' method.
@@ -133,13 +133,13 @@ This class is intended to make it easier to program applications with many scree
     </td><td class="summary">
       <table width="100%" cellpadding="0" cellspacing="0" border="0">
         <tr>
-          <td><span class="summary-sig"><a href="npyscreen.NPSAppManaged.NPSAppManaged-class.html#addForm" class="summary-sig-name">addForm</a>(<span class="summary-sig-arg">self</span>,
+          <td><span class="summary-sig"><a href="npyscreen.NPSAppManaged.NPSAppManaged-class.html#registerForm" class="summary-sig-name">registerForm</a>(<span class="summary-sig-arg">self</span>,
         <span class="summary-sig-arg">name</span>,
         <span class="summary-sig-arg">fm</span>)</span><br />
       name should be a string which should uniquely identify the 
       form.</td>
           <td align="right" valign="top">
-            <span class="codelink"><a href="npyscreen.NPSAppManaged-pysrc.html#NPSAppManaged.addForm">source&nbsp;code</a></span>
+            <span class="codelink"><a href="npyscreen.NPSAppManaged-pysrc.html#NPSAppManaged.registerForm">source&nbsp;code</a></span>
             
           </td>
         </tr>
@@ -352,19 +352,19 @@ This class is intended to make it easier to program applications with many scree
   </dl>
 </td></tr></table>
 </div>
-<a name="addForm"></a>
+<a name="registerForm"></a>
 <div>
 <table class="details" border="1" cellpadding="3"
        cellspacing="0" width="100%" bgcolor="white">
 <tr><td>
   <table width="100%" cellpadding="0" cellspacing="0" border="0">
   <tr valign="top"><td>
-  <h3 class="epydoc"><span class="sig"><span class="sig-name">addForm</span>(<span class="sig-arg">self</span>,
+  <h3 class="epydoc"><span class="sig"><span class="sig-name">registerForm</span>(<span class="sig-arg">self</span>,
         <span class="sig-arg">name</span>,
         <span class="sig-arg">fm</span>)</span>
   </h3>
   </td><td align="right" valign="top"
-    ><span class="codelink"><a href="npyscreen.NPSAppManaged-pysrc.html#NPSAppManaged.addForm">source&nbsp;code</a></span>&nbsp;
+    ><span class="codelink"><a href="npyscreen.NPSAppManaged-pysrc.html#NPSAppManaged.registerForm">source&nbsp;code</a></span>&nbsp;
     </td>
   </table>
   
