Tabs changed to spaces

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -34,7 +34,7 @@ This is a curses library and application framework for python that provides a re
 
 <p>The best way to see how it works is to download the source code and have a look at <code><strong>EXAMPLE.py</strong></code>.  
 
-<h3>You can download the latest version of the software <a href="dist/">here</a></h3>
+<h3>You can download the latest version of the software <a href="dist/">here</a> or from <A HREF="http://code.google.com/p/npyscreen">Google Code</A>.</h3>
 
 <p>If you want to install it, you can do:
 
