--- a/webpage/index.html
+++ b/webpage/index.html
@@ -34,11 +34,14 @@ This is a curses library and application framework for python that provides a re
 
 <p>The best way to see how it works is to download the source code and have a look at <code><strong>EXAMPLE.py</strong></code>.  
 
-<h3>You can download the latest version of the software <a href="dist/">here</a> or from <A HREF="http://code.google.com/p/npyscreen">Google Code</A>.</h3>
+<h3>You can download the latest version of the software from <A HREF="http://code.google.com/p/npyscreen">Google Code</A> or from <A HREF="http://pypi.python.org/pypi/npyscreen/">PyPI</A>.</h3>
 
 <p>If you want to install it, you can do:
 
 <p><code>python setup.py install</code>
+
+<p>or, if you want to download and install from PyPI automatically:
+<p><code>easy_install npyscreen</code>
 </p>
 
 <p>You might also like to read the tutorial and documentation included with the distribution.
@@ -54,7 +57,7 @@ This is a curses library and application framework for python that provides a re
 
 <p>This library does not currently support the mouse, mostly because I have not had the need for mouse support, but that feature may well be added in the future, and the core of it is already built into the library.
 
-<p>There is very limited support for unicode/utf-8 (the python curses bindings are currently incomplete, but a patch seems to be in the works). I shall be making the unicode support more robust in the future.  For the moment, unicode strings in text fields (and all the many things that are derived from them) should display properly (if you run into problems, all widgets have a <code>safe_string(str)</code> method which will return a string that will not crash your application).
+<p>The library aims to support unicode/utf-8.  Please report any problems using the bug-tracker at code.google.com/p/npyscreen.
 
 <p>I am working on a new mechanism for creating Forms which will make resizing forms automatic when the terminal resizes.  However, in the meantime, the library will create forms based on a fixed size (determined when the Form is created).  On the plus side, this library does make sure that a resized terminal will not cause your application to crash.  (In fact, this library was first inspired by the desire to be able to write applications that would not crash merely because a terminal window had changed shape.  Things rapidly got more complicated.)
 
