Added html semantics

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 
-<H1>npyscreen.py</H1>
-<H2>Rapid UI development for python/curses</H2>
+<h1>npyscreen.py</h1>
+<h2>Rapid UI development for python/curses</h2>
 <h5>(Putting a user interface on your hacks^W programs without all that mucking around in hyperspace)</h5>
 
 <hr>
@@ -48,16 +48,16 @@ This is a curses library and application framework for python that provides a re
 
 <h3>Strengths</h3>
 
-<p>This framework should be powerful enough to create everything from quick, simple programs to complex, multi-screen applications.  It is designed to make doing the simple tasks very quick and to take much of the pain out of writing larger applications.
+<p>This framework should be powerful enough to create everything from quick and simple programs to complex, multi-screen applications.  It is designed to make doing the simple tasks very quick and to take much of the pain out of writing larger applications.
 
 <p>The framework is easy to extend.  That said, if you have a requirement for a widget that is not currently included you can try emailing me and I'll see whether I have time to help - no promises!
 
 
 <h3>Limitations</h3>
 
-<p>This library does not currently support the mouse, mostly because I have not had the need for mouse support, but that feature may well be added in the future, and the core of it is already built into the library.
+<p>This library does not currently support the mouse, mostly because I have not had the need for mouse support, but that feature may well be added soon in the future, and the core features for mouse support are already built into the library.
 
-<p>The library aims to support unicode/utf-8.  Please report any problems using the bug-tracker at code.google.com/p/npyscreen.
+<p>The library aims to support unicode/utf-8.  Please report any problems using the bug-tracker at <a href="code.google.com/p/npyscreen">code.google.com/p/npyscreen</a>.
 
 <p>I am working on a new mechanism for creating Forms which will make resizing forms automatic when the terminal resizes.  However, in the meantime, the library will create forms based on a fixed size (determined when the Form is created).  On the plus side, this library does make sure that a resized terminal will not cause your application to crash.  (In fact, this library was first inspired by the desire to be able to write applications that would not crash merely because a terminal window had changed shape.  Things rapidly got more complicated.)
 
